# openvx-rust

./: Cargo.toml  build.rs
examples/: corner_factory.rs  cvmat.rs  edge_factory.rs
src/: lib.rs  main.rs  openvx.rs
vx/: Cargo.toml
vx-api/: Cargo.toml
vx-api/src/: lib.rs
vx-cv/: Cargo.toml
vx-cv/src/: lib.rs
vx-nnef/: Cargo.toml
vx-nnef/src/: lib.rs
vx/src/: lib.rs
