[package]
name = "openvx"
version = "0.1.0"
authors = ["Ueki Masaru <masaru.ueki@itage.co.jp>"]
license = "MIT"
repository = "https://github.com/maueki/openvx-rust"

[dependencies]
error-chain = "*"

[build-dependencies]
bindgen = "0.33"

[dev-dependencies]
cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
