[package]
name = "openvx-test"
version = "0.0.1"
publish = false

[dependencies]
vx = { path = "./vx" }
vx-api = { path = "./vx-api" }
vx-cv = { path = "./vx-cv" }
vx-nnef = { path = "./vx-nnef" }

[workspace]
members = [ "vx", "vx-cv", "vx-api", "vx-nnef" ]

[dev-dependencies]
cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
